--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/activity_main"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
-    tools:context=".MainActivity">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/activity_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        tools:context=".MainActivity" android:background="#26ade0">
+    <Button
+            android:text="Ask"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_alignParentStart="true"
+            android:layout_marginStart="156dp" android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true" android:id="@+id/askButton" android:layout_marginBottom="113dp"
+            android:layout_marginLeft="156dp" android:textColor="@android:color/background_light"
+            android:background="@android:color/holo_blue_dark"/>
+    <TextView
+            android:text="Make everyday decisions easier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_alignParentStart="true"
+            android:layout_marginStart="60dp" android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true" android:id="@+id/textView" android:layout_marginTop="113dp"
+            android:layout_marginLeft="60dp" android:textSize="20sp" android:textColor="@android:color/black"
+            android:textStyle="bold"/>
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:srcCompat="@drawable/ball1" android:layout_alignParentStart="true"
+            android:layout_marginStart="38dp" android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true" android:id="@+id/image_eightBall" android:layout_marginTop="236dp"
+            android:layout_marginLeft="38dp"/>
 </RelativeLayout>
